Just fixed the documentation adn deleted unnecessary comments