@@ -11,19 +11,16 @@ import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
-import javafx.scene.text.Font;
 import javafx.scene.transform.Scale;
 import javafx.stage.Stage;
 import javafx.util.Duration;
-
-
 import java.util.*;
 
 public class ItalyUI extends Application {
     private Map<String, Circle> cityCircles = new HashMap<>();
     @Override
     public void start(Stage primaryStage) {
-        // Ask for user input +++
+        // Ask for user input
         List<UserInfoResult> userInfoResults = AskForUserInput();
         for (UserInfoResult result : userInfoResults) {
             System.out.println("Number of Interests: " + result.numInterests);
@@ -40,13 +37,14 @@ public class ItalyUI extends Application {
             System.out.println(Arrays.toString(turnData.groupPopulation));
             System.out.println("-----------------");
         }
-        //Start the UI with 5s intervals initializeUI(primaryStage, cityInfoList);
+
+        //Start the UI with 1s intervals initializeUI(primaryStage, cityInfoList);
         initializeUI(primaryStage, turnDataList, userInfoResults);
 
     }
 
+    // Ask for user input
     private List<UserInfoResult> AskForUserInput() {
-
         CityInfo[] cityInfoList = new CityInfo[]{new CityInfo(500, 400, "Bologna", 100, 0.7F), new CityInfo(350, 250, "Milan", 100, 0.7f), new CityInfo(750, 850, "Napoli", 100, 0.7F), new CityInfo(200, 300, "Turin", 100, 0.7F), new CityInfo(550, 700, "Roma", 100, 0.7F), new CityInfo(600, 260, "Venezia", 100, 0.7F), new CityInfo(750, 1200, "Palermo", 100, 0.7F), new CityInfo(450, 470, "Firenze", 100, 0.7F), new CityInfo(930, 800, "Bari", 100, 0.7F), new CityInfo(250, 400, "Genova", 100, 0.7F),};
         // Create a Dialog for user choice
         List<UserInfoResult> userInfoResult = new ArrayList<>();
@@ -64,28 +62,24 @@ public class ItalyUI extends Application {
 
 
         dialog.showAndWait().ifPresent(response -> {
-
             UserInfoResult result = new UserInfoResult();
             inputDialog.setHeaderText("Enter the number of turns for this simulation: ");
             String TurnsStr = inputDialog.showAndWait().orElse("200");
-            int turns = Integer.parseInt(TurnsStr);
-            result.turns = turns;
+            result.turns = Integer.parseInt(TurnsStr);
 
             inputDialog.setHeaderText("Enter the number of interests for this simulation: ");
             String numInterestsStr = inputDialog.showAndWait().orElse("");
-            int numInterests = Integer.parseInt(numInterestsStr);
-            result.numInterests = numInterests;
-
+            result.numInterests = Integer.parseInt(numInterestsStr);
 
             if (response == yesButtonType) {
                 for (CityInfo city : cityInfoList) {
                     inputDialog.setHeaderText("Population for " + city.cityName + ":");
-                    inputDialog.getEditor().setText(String.valueOf(city.population)); // Set the current value
+                    inputDialog.getEditor().setText(String.valueOf(city.population));
                     String populationStr = inputDialog.showAndWait().orElse("100");
                     city.population = Integer.parseInt(populationStr);
 
                     inputDialog.setHeaderText("Enter the minimum group affiliation for " + city.cityName + ":");
-                    inputDialog.getEditor().setText(String.valueOf(city.minGroupAffiliation)); // Set the current value
+                    inputDialog.getEditor().setText(String.valueOf(city.minGroupAffiliation));
                     String minGroupAffiliationStr = inputDialog.showAndWait().orElse("0.7");
                     city.minGroupAffiliation = Float.parseFloat(minGroupAffiliationStr);
                 }
@@ -102,9 +96,9 @@ public class ItalyUI extends Application {
     }
 
     private List<TurnData> runSimulation(List<UserInfoResult> userInfoResult) {
-        int numberOfInterests = userInfoResult.get(0).numInterests;
-        int numberOfTurns = userInfoResult.get(0).turns;
-        CityInfo[] cityInfoList = userInfoResult.get(0).cityInfoList;
+        int numberOfInterests = userInfoResult.getFirst().numInterests;
+        int numberOfTurns = userInfoResult.getFirst().turns;
+        CityInfo[] cityInfoList = userInfoResult.getFirst().cityInfoList;
         //    CityInfo[] cityInfoList = new CityInfo[]{
         //            new CityInfo(500, 400, "Bologna", 100, 0.7F),
         //            new CityInfo(350, 250, "Milan", 100, 0.7f),
@@ -120,7 +114,6 @@ public class ItalyUI extends Application {
         List<int[][]> lonelyPeopleMatrixList = new ArrayList<>();
         Simulation simulation = new Simulation(cityInfoList, numberOfInterests);
         int n = numberOfTurns;
-        int a = 0;
         List<TurnData> turnDataList = new ArrayList<>();
         while (n > 0) {
             simulation.runTurn();
@@ -130,19 +123,20 @@ public class ItalyUI extends Application {
         return turnDataList;
     }
 
+    // Initialize the UI
     private void initializeUI(Stage primaryStage, List<TurnData> turnDataList, List<UserInfoResult> userInfoResult) {
         Image image = new Image("ital.png");
         ImageView imageView = new ImageView(image);
 
-        int GroupLength = turnDataList.get(0).groupPopulation.length;
+        int GroupLength = turnDataList.getFirst().groupPopulation.length;
+
         // Create a Pane and add the ImageView to it
         Pane pane = new Pane();
         pane.getChildren().add(imageView);
 
         // Create a CitiesList and get the list of cities
-        CityInfo[] cityInfoList = userInfoResult.get(0).cityInfoList;
+        CityInfo[] cityInfoList = userInfoResult.getFirst().cityInfoList;
         Map<String, Label> cityLabels = new HashMap<>();
-
 
         // VBox to hold city population labels
         VBox cityInfoVBox = new VBox();
@@ -160,20 +154,19 @@ public class ItalyUI extends Application {
         cityInfoVBox.getChildren().add(turnNumberLabel);
 
         for (CityInfo city : cityInfoList) {
-            Circle circle = new Circle(10); // Adjust the size as needed
+            Circle circle = new Circle(10);
             Label cityCircle = new Label();
             cityCircle.setLayoutX(city.Xaxis);
             cityCircle.setLayoutY(city.Yaxis);
             pane.getChildren().add(cityCircle);
 
             Label cityLabel = new Label(city.cityName + ": " + city.population);
-            cityLabels.put(city.cityName, cityLabel); // Add label to the map
-            cityLabel.setTextFill(Color.BLACK); // Set text color
-            cityLabel.setFont(new javafx.scene.text.Font("Arial", 40)); // Set font size
-            cityInfoVBox.getChildren().add(cityLabel); // Add label to the VBox
+            cityLabels.put(city.cityName, cityLabel);
+            cityLabel.setTextFill(Color.BLACK);
+            cityLabel.setFont(new javafx.scene.text.Font("Arial", 40));
+            cityInfoVBox.getChildren().add(cityLabel);
 
             // City stats are shown when the circle is clicked
-
             cityCircles.put(city.cityName, circle);
             circle.setOnMouseClicked((MouseEvent event) -> {
                 Alert alert = new Alert(Alert.AlertType.INFORMATION);
@@ -181,14 +174,11 @@ public class ItalyUI extends Application {
                 alert.setHeaderText(null);
                 alert.setContentText("Starting Population: " + city.population + "\n" + "Minimum Group Affiliation: " + city.minGroupAffiliation + "\n" + "Groups: " + GroupLength + "\n");
 
-                // Show the dialog in a non-modal way
                 alert.show();
+                double titleBarHeight = 30.0;
+                double windowBorderWidth = 30.0;
 
-                // Estimate the size of the window decorations
-                double titleBarHeight = 30.0; // This is an estimate, adjust as needed
-                double windowBorderWidth = 30.0; // This is an estimate, adjust as needed
-
-                // Position the dialog at the top right corner of the application, inside the window decorations
+                // Position the dialog in the top right corner of the application, inside the window decorations
                 alert.getDialogPane().getScene().getWindow().setX(primaryStage.getX() + primaryStage.getWidth() - alert.getDialogPane().getWidth() - windowBorderWidth);
                 alert.getDialogPane().getScene().getWindow().setY(primaryStage.getY() + titleBarHeight);
 
@@ -200,6 +190,7 @@ public class ItalyUI extends Application {
             circle.setCenterX(city.Xaxis);
             circle.setCenterY(city.Yaxis);
         }
+
         // Create a Label to display the information
         Label infoLabel = new Label();
         infoLabel.setTextFill(Color.BLACK);
@@ -208,12 +199,11 @@ public class ItalyUI extends Application {
         pane.getChildren().add(infoLabel);
 
 
-// Create an iterator for each list
+        // Create an iterator for each list
         Iterator<TurnData> turnDataIterator = turnDataList.iterator();
 
         Timeline timeline = new Timeline(new KeyFrame(Duration.seconds(1), event -> {
             if (turnDataIterator.hasNext()) {
-                // for each group
                 TurnData turnData = turnDataIterator.next();
                 int[] groupPopulation = turnData.groupPopulation;
 
@@ -222,14 +212,13 @@ public class ItalyUI extends Application {
                     infoLabel.toFront();
                     CityData[] cityDatas = turnData.cityDatas;
                     for (int i = 0; i < cityDatas.length; i++) {
-                        int currentTurn = i;
                         CityData cityData = cityDatas[i];
                         CityInfo cityInfo = cityInfoList[i];
                         Label cityLabel = cityLabels.get(cityInfo.cityName);
                         cityLabel.setText(cityInfo.cityName + ": " + cityData.population);
 
                         // We need to add the city turn to vbox
-                        Circle circle = cityCircles.get(cityInfo.cityName); // Get the circle for the city
+                        Circle circle = cityCircles.get(cityInfo.cityName);
                         double radius = calculateRadius(cityData.population);
                         circle.setRadius(radius);
 
@@ -246,20 +235,20 @@ public class ItalyUI extends Application {
                 }
             }));
 
-// Set the cycle count to the size of the lists
+        // Set the cycle count to the size of the lists
         timeline.setCycleCount(turnDataList.size());
 
-// Start the Timeline
+        // Start the Timeline
         timeline.play();
-        // Create a ScrollPane
+        // create a ScrollPane
         ScrollPane scrollPane = new ScrollPane();
         scrollPane.setContent(pane);
 
-        // Create a Scale transform for zooming
+        // create a Scale transform for zooming
         Scale scale = new Scale(0.4, 0.4);
         pane.getTransforms().add(scale);
 
-        // Add a zoom handler
+        // zoom handler
         scrollPane.addEventFilter(ScrollEvent.SCROLL, event -> {
             if (event.getDeltaY() > 0) {
                 scale.setX(scale.getX() * 1.1);
@@ -274,7 +263,6 @@ public class ItalyUI extends Application {
         Scene scene = new Scene(scrollPane, 1000, 650);
 
         // Set the initial position of the label
-
         infoLabel.setLayoutX(1150);
         infoLabel.setLayoutY(1100);
 
@@ -287,9 +275,7 @@ public class ItalyUI extends Application {
     }
 
     private double calculateRadius(int population) {
-        // Adjust this factor as needed to control the scaling of the circle based on population
         double scaleFactor = 1.5;
-        // Calculate radius based on population
         return Math.sqrt(population) * scaleFactor;
     }
 
@@ -303,15 +289,12 @@ public class ItalyUI extends Application {
                 "Minimum Group Affiliation: " + cityInfo.minGroupAffiliation + "\n" +
                 "Groups: " + GroupLength + "\n");
 
-        // Show the dialog in a non-modal way
+
         alert.show();
+        double titleBarHeight = 39.0;
+        double windowBorderWidth = 40.0;
 
-        // Estimate the size of the window decorations
-        double titleBarHeight = 39.0; // This is an estimate, adjust as needed
-        double windowBorderWidth = 40.0; // This is an estimate, adjust as needed
-
-        // Position the dialog at the top right corner of the application, inside the window decorations
-        // Position the dialog at the top right corner of the application, inside the window borders
+        // Position the dialog in the top right corner of the application, inside the window borders
         Stage alertStage = (Stage) alert.getDialogPane().getScene().getWindow();
         titleBarHeight = primaryStage.getHeight() - primaryStage.getScene().getHeight();
         windowBorderWidth = primaryStage.getWidth() - primaryStage.getScene().getWidth();
@@ -330,7 +313,3 @@ public class ItalyUI extends Application {
     }
 }
 
-
-// here we need to add the final result excel alike table to show the results of the simulation
-// from bologna to milan, napoli to roma etc. the number of people moved from one city to another
-// Launch the application
